Fix QG violations